--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
                     <!-- PROJECT CARD 1: Responsive-Food-And-Restaurant-Website-Using-Bootstrap-5_Project -->
                     <div class="project-card">
-                        <img src="/images/image.png" alt="Responsive-Food" class="project-cover">
+                        <img src="./images/image.png" alt="Responsive-Food" class="project-cover">
                         <h3>Restaurant-Website</h3>
                         <p class="description">
                             It is a modern, mobile-friendly website designed to promote restaurants online. It uses
@@ -288,4 +288,5 @@
    
     <script src="script.js"></script>
 </body>
+
 </html>
